fluidity/fluidity.css
/* ... */
#posts .post {
    width: 820px;
    margin-right: 200px;
    
    position: absolute;
    display: block;
}

#posts .post.focus {
    
}

#posts .post .body {
    opacity: 0.2;
    -webkit-transition: all 0.1s ease-in-out;
}
#posts .post.focus .body {
    opacity: 1;
}

#posts .post .meta {
    position: absolute;
    top: -70px;
    width: 100%;
}

#posts .post .meta .date {
    font-size: 14px;
    display: inline-block;
    
    text-align: center;
    line-height: 1em;
    padding: 15px 15px 10px;
    
    font-family: arial;
    
    background: transparent url("images/bg-black.jpg");
    
    border-radius: 3px;
    color: #666;
    color: rgba(255, 255, 255, 0.1);
    
    -webkit-transition: color 1s ease-in, text-shadow 1s ease-in-out;
}

#posts .post.focus .meta .date {
    color: #eee;
    color: rgba(255, 255, 255, 0.8);
    text-shadow: 0 0 3px #fff;
}

#posts .post .meta .line {
    display: inline-block;
    vertical-align: top;
    padding: 13px 0 0 5px;
    font-size: 14px;
    
    opacity: 0;
}

#posts .post.focus .meta .line {
    -webkit-transition: opacity 0.2s ease-out;
    opacity: 1.0;
}

#posts .post .meta .line a {
    color: #777;
    line-height: 1em;
}

#posts .post .meta .line .permalink {
    background: url("images/permalink.png") no-repeat 0 0px;
    padding-left: 22px;
    margin-left: 5px;
    height: 18px;
}

#posts .post .meta .line .tweet {
    background: url("images/tweet.png") no-repeat 0 0px;
    margin-left: 20px;
    padding-left: 22px;
}

#posts .post .meta .line .note-count {
    background: url("images/notes.png") no-repeat 0 0px;
    margin-left: 20px;
    padding-left: 22px;
}

#posts .post .meta .reblogged {
    position: absolute;
    top: 0;
    right: 0;
    
    background-color: #fff;
    padding: 10px 15px 10px 15px;
    
    font-size: 16px;
    line-height: 1.3em;
    
    box-shadow: 0px 3px 3px rgba(0,0,0,0.3);
    
/*    -webkit-transform: rotate(-2deg);*/
    
    -webkit-transition: opacity 0.2s ease-in-out, top 0.5s ease-in-out;
    top: -5px;
    opacity: 0;
}

#posts .post.focus .meta .reblogged {
    opacity: 1.0;
    top: 0;
}

#posts .post .meta .reblogged .text {
    float: right;
}

#posts .post .meta .reblogged .from {
    
}

#posts .post .meta .reblogged .name {
    text-align: center;
}

#posts .post .meta .reblogged .photo {
    float: right;
    margin-left: 10px;
}

#posts .post .meta .reblogged .photo img {
    display: block;
}


a {
    text-decoration: none;
    color: #2a8bc7;
}
a:hover {
    text-decoration: underline;
    color: #2a8bc7;
}



#navigation {
    text-align: center;
}

/* Global Classes
-------------------------------------------------------------------------------*/

.g-invisible {
    display: none;
}



/* Post Type Styles
-------------------------------------------------------------------------------*/

#posts .post h1.title {
    font-size: 38px;
    line-height: 1.2em;
    margin-bottom: 20px;
    font-weight: normal;
    
/*    text-shadow: 0 0 80px #f8f;*/
}

#posts .post h1.title a {
    color: #333;
    text-decoration: none;
}

#posts .post p {
    margin-bottom: 1.7em;
}

#posts .post footer {
    font-size: 15px;
}

#posts .post blockquote {
    padding-left: 20px;
    border-left: 10px solid rgba(0,0,0,0.5);
}


/* Text Post */

#posts .post.text .title {}
#posts .post.text .copy {}


/* Answer Post */

#posts .post.answer .question {
    background-color: #eee;
    text-align: center;
}
#posts .post.answer .asker-wrapper {}
#posts .post.answer .answer {}


/* Link Post */

#posts .post.link .title {
    margin-bottom: 0;
}
#posts .post.link .subtitle {
    font-size: 14px;
    margin-bottom: 20px;
    font-weight: normal;
    overflow: hidden;
    line-height: 1.2em;
}
#posts .post.link .subtitle .arrow {
    display: inline-block;
    width: 20px;
    vertical-align: top;
    padding-left: 2px;
}
#posts .post.link .subtitle .link {
    display: inline-block;
    width: 794px;
}
#posts .post.link .subtitle .link a {
    color: #666;
    text-decoration: none;
    word-wrap: break-word;   
}
#posts .post.link .subtitle .link a:hover {
    text-decoration: underline;
}

#posts .post.link .description {}


/* Chat Post */

#posts .post.chat .title {}
#posts .post.chat .transcript {}
#posts .post.chat .transcript .line {
    padding-bottom: 10px;
}
#posts .post.chat .transcript .line.odd {}
#posts .post.chat .transcript .line.even {}
#posts .post.chat .transcript .line .label {
    font-weight: bold;
}


/* Quotation Post */

#posts .post.quote .quote {
    margin-bottom: 10px;
}
#posts .post.quote .quote:before,
#posts .post.quote .quote:after {
    content: '"';
}
#posts .post.quote .quote.short {}
#posts .post.quote .quote.medium {}
#posts .post.quote .quote.long {}
#posts .post.quote .source {
    text-align: center;
    font-size: 0.8em;
}


/* Photo Post */

#posts .post.photo .photo-wrapper {
    padding: 20px;
    border: 1px solid #eaeaea;
    display: inline-block;
    
    border-radius: 3px;
    
    margin-bottom: 20px;
}
#posts .post.photo .photo-wrapper .photo {
    display: block;
}
#posts .post.photo .caption {}
#posts .post.photo .exif-data {}
#posts .post.photo .exif-data .camera-info {}
#posts .post.photo .exif-data .aperture {}
#posts .post.photo .exif-data .exposure {}
#posts .post.photo .exif-data .focal-length {}


/* Photoset Post */

#posts .post.photoset .photoset {
    margin-bottom: 20px;
}
#posts .post.photoset .caption {}


/* Video Post */

#posts .post.video .video {
    margin-bottom: 20px;
}

#posts .post.video .video iframe {
    width: 820px;
    height: 461px;
}



/* Odd bits */

.superscript {
    vertical-align: super;
    font-size: 0.7em;
}



/* Print styles!
-------------------------------------------------------------------------------*/
@media print {



}
/* ... */

